Fixed word wrap in description_row and remove action in Settings button (Main.xml)

--- a/SuperAgent/solution/resource/app/Style/Default/default.css
+++ b/SuperAgent/solution/resource/app/Style/Default/default.css
@@ -266,6 +266,7 @@ MemoEdit {
             .grid hl vl description_row {
                 width: 100%;
                 height: 34%;
+                white-space: nowrap;
                 font: 60% Arial;
             }
 
